Added DateOfBirth as a field in api/Employees

--- a/Seranet.Api.Plugins.Employee/SqlResource.resx
+++ b/Seranet.Api.Plugins.Employee/SqlResource.resx
@@ -123,7 +123,7 @@
 	e.Surname, 
                    e.Email,
 	e.NICNumber,
-	e.hrMobileNo,
+ e.DateOfBirth,	e.hrMobileNo,
 	e.Twitter,
 	e.Facebook,
 	e.LinkedIn,
